<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ridemyspot="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_fav"
        android:icon="@drawable/heart_empty"
        android:title="@string/menu_spot_fav"
        ridemyspot:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_vote"
        android:icon="@drawable/flux"
        android:onClick="showPopup"
        android:title="@string/menu_spot_vote"
        ridemyspot:showAsAction="ifRoom|withText"/>
    <!--
	<item
		android:id="@+id/menu_share"
		ridemyspot:showAsAction="ifRoom|withText"
		android:title="@string/menu_spot_share"
		android:icon="@drawable/fork"
		/>
    -->
    <item
        android:id="@+id/menu_stview"
        android:icon="@drawable/eye_2"
        android:title="@string/menu_spot_stview"
        ridemyspot:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_nav"
        android:icon="@drawable/mail_2"
        android:title="@string/menu_spot_nav"
        ridemyspot:showAsAction="ifRoom|withText"/>

</menu>