<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:singleLine="true"
        android:text="Login :" />

    <EditText
        android:id="@+id/add_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:paddingBottom="10dip" />

    <RadioGroup
        android:id="@+id/add_user_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    <RadioButton
	        android:id="@+id/add_user_roller"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_roller" 
        	android:onClick="onRadioButtonClicked"/>
	
	    <RadioButton
	        android:id="@+id/add_user_skate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_skate" 
        	android:onClick="onRadioButtonClicked"/>
	
	    <RadioButton
	        android:id="@+id/add_user_bmx"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_bmx" 
        	android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
    
    <Button 
        android:id="@+id/add_user_validate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Valider"/>

</LinearLayout>